// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner large 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Spinner-spinner-0 Spinner-spinnerLarge-0"
  data-component-name="Spinner"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner medium 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Spinner-spinner-0 Spinner-spinnerMedium-0"
  data-component-name="Spinner"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner small 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Spinner-spinner-0 Spinner-spinnerSmall-0"
  data-component-name="Spinner"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner with custom class name 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Spinner-spinner-0 testClassName1337 Spinner-spinnerLarge-0"
  data-component-name="Spinner"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner with delay 1`] = `null`;
